# cloud-vfs

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
cloud_vfs/: __init__.py  __main__.py  cli.py  doctor.py  gpu_workflow.py  guard.py  materialize.py  project.py  scaffold.py  scan.py  try_demo.py  update_check.py
cloud_vfs/bundled/scripts/: lib-azure.sh  provision-azure.sh  setup-blob-storage.sh  test-aws-roundtrip.sh
cloud_vfs/bundled/templates/: config.env.example  index-README.md  inventory-policy.json.example  manifest.json  secrets.env.example
cloud_vfs/storage/: __init__.py  backends.py  cleanup.py  config.py  env.py  errors.py  fetch.py  inventory.py  io_util.py  legacy_env.py  locks.py  manifest.py  offload_job.py  offload_progress.py  paths.py  stub.py
docs/: AGENTS.md  CLOUD_VFS.md  DESIGN.md  GPU_WORKFLOW.md  INVENTORY.md  PUBLISHING.md  ROBUSTNESS.md  SOURCE_TARGET.md  TEAM.md  TRY.md  YOUR_REPO.md
docs/superpowers/specs/: 2026-05-29-hybrid-inline-stubs-design.md  2026-06-08-offload-always-prefixes-design.md  2026-06-27-update-notification-design.md
examples/minimal-demo/: README.md
marketing/: SUBREDDITS.md
marketing/posts/: r-mlops.md
tests/: fake_object_store.py  test_cleanup.py  test_doctor.py  test_e2e_offload.py  test_gpu_workflow.py  test_guard_verify.py  test_issue_37.py  test_issue_38.py  test_issues.py  test_locks.py  test_materialize.py  test_robust.py  test_scan.py  test_stub_hybrid.py  test_try.py  test_update_check.py
(+12 files in other folders)
