[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-vfs"
version = "0.1.1"
description = "Manual Azure blob virtual filesystem — lazy fetch, dry-run offload, Cursor skill"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cloud-vfs contributors" }]
requires-python = ">=3.9"
keywords = ["azure", "blob", "ml", "storage", "cursor", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sahasrarjn/cloud-vfs"
Repository = "https://github.com/sahasrarjn/cloud-vfs"
Issues = "https://github.com/sahasrarjn/cloud-vfs/issues"

[project.scripts]
cloud-vfs = "cloud_vfs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud_vfs*"]

[tool.setuptools.package-data]
cloud_vfs = ["bundled/**/*"]
